[package]
name = "binator_context"
authors = ["Stargateur"]
version = "0.0.2"
description = "Group commun context handle to use with binator"
license = "Zlib"
repository = "https://github.com/binator/context"
readme = "readme.md"
keywords = ["parsing", "combinator", "context"]
categories = ["parsing"]
edition = "2021"

include = [
  "readme.md",
  "license.md",
  "Cargo.toml",
  "rustfmt.toml",
  "src/**/*.rs",
]

[features]
alloc = ["binator_core/alloc"]
stack = ["smallvec", "binator_core/smallvec"]
tree = ["smallvec", "binator_core/smallvec", "alloc"]
default = ["stack", "tree", "alloc", "smallvec/serde"]

[dependencies]

[dependencies.binator_core]
version = "0.0.2"
default-features = false

[dependencies.smallvec]
version = "1.7"
default-features = false
optional = true
features = ["const_new", "union", "const_generics"]

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[dependencies.tracing]
version = "0.1"
optional = true

[package.metadata.docs.rs]
all-features = true
